# corexa

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: architecture_proposal.yml  bug_report.yml  config.yml  documentation_improvement.yml  epic.yml  feature_request.yml  performance_regression.yml  plugin_proposal.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
agents/architect/: package.json
agents/coder/: package.json
agents/debugger/: package.json
agents/orchestrator/: package.json
agents/planner/: package.json
agents/reviewer/: package.json
apps/cli/: package.json
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.json
docs/: README.md
docs/architecture/: README.md  corexa-platform-architecture.md  monorepo-structure.md
docs/development/: README.md  local-development.md  testing-and-release.md
docs/product/: roadmap.md  vision.md
docs/project/: README.md  execution-plan.md  github-issues.md  goals.md  milestones.md  open-source-model.md
examples/workflows/: bugfix-agent.yaml
infrastructure/compose/: qdrant.yml
infrastructure/kubernetes/: runtime-deployment.yaml
native/tree-sitter-indexer/: Cargo.toml
native/tree-sitter-indexer/src/: lib.rs  main.rs
scripts/: bootstrap.sh  dev.sh  scan-workspace.sh
(+57 files in other folders)
